# django-twitter-clone

./: pyproject.toml
authentication/: forms.py  urls.py  views.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py
notification/templates/: notifications.html
tweet/: admin.py  forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_created_by.py
tweet/static/css/: index.css
tweet/templates/: index.html  tweet-detail.html
tweet/templates/index/: index.html
twitter_clone/: settings.py  urls.py
twitteruser/: admin.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py
twitteruser/templates/: profile.html
