[tool.poetry]
name = "twitter-clone"
version = "0.1.0"
description = ""
authors = ["James Maupin <jmsMaupinRC@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
